[gd_scene load_steps=11 format=3 uid="uid://bk70002kcakeg"]

[ext_resource type="Script" path="res://MerchantTower.gd" id="1_3g01s"]
[ext_resource type="Texture2D" uid="uid://cebnmqp4knlx6" path="res://Art/MerchantManGetMoney!-export.png" id="1_46xfa"]
[ext_resource type="Texture2D" uid="uid://jyh1a2e7aix1" path="res://Art/MerchantManOne.png" id="2_8yb3o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uuixr"]
atlas = ExtResource("1_46xfa")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnfrc"]
atlas = ExtResource("1_46xfa")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5km0"]
atlas = ExtResource("1_46xfa")
region = Rect2(640, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgmdp"]
atlas = ExtResource("1_46xfa")
region = Rect2(960, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_hbe5k"]
atlas = ExtResource("1_46xfa")
region = Rect2(1280, 0, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_c1qc4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuixr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnfrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5km0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgmdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hbe5k")
}],
"loop": true,
"name": &"money",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_8yb3o")
}],
"loop": true,
"name": &"static",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kx3b2"]
size = Vector2(280, 285.714)

[node name="MerchantTower" type="AnimatedSprite2D"]
position = Vector2(193, 138)
scale = Vector2(0.2, 0.189)
sprite_frames = SubResource("SpriteFrames_c1qc4")
animation = &"static"
script = ExtResource("1_3g01s")

[node name="GetMoneyTimer" type="Timer" parent="."]
wait_time = 10.315

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 31.7462)
shape = SubResource("RectangleShape2D_kx3b2")

[node name="Popup" type="Popup" parent="."]

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="animation_looped" from="." to="." method="_on_animation_looped"]
[connection signal="timeout" from="GetMoneyTimer" to="." method="_on_get_money_timer_timeout"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
